@@ -94,20 +94,21 @@ ok(agree($g->Vec2LC_G(zeroes(11,11)->ndcoords->r2C)->re,
    "Vec2LC");
 ok(agree($g->LC2Vec_G(ones(11,11)->r2C)->re, $g->GNorm), "LC2Vec_G");
 
-skip "image converter not found", 5 unless rpiccan("PNG");
-my $gw=Photonic::Geometry::FromImage2D->new(path=>'data/white.png');
-ok(defined $gw, "Create geometry from Image");
-ok(all($gw->B==ones(11, 11)), "lazy-build B");
-ok($gw->npoints==11*11, "npoints");
-ok($gw->f==1, "filling fraction of white");
-my $gb=Photonic::Geometry::FromImage2D->new(path=>'data/black.png');
-ok($gb->f==0, "filling fraction of black");
-my $gbi=Photonic::Geometry::FromImage2D->new(
-path=>'data/black.png', inverted=>1);
-ok($gbi->f==1, "filling fraction of inverted black");
-my $gh=Photonic::Geometry::FromImage2D->new(path=>'data/half.png');
-ok($gh->f==0.5, "filling fraction of half/half");
-
+SKIP {
+     skip "image converter not found", 7 unless rpiccan("PNG");
+     my $gw=Photonic::Geometry::FromImage2D->new(path=>'data/white.png');
+     ok(defined $gw, "Create geometry from Image");
+     ok(all($gw->B==ones(11, 11)), "lazy-build B");
+     ok($gw->npoints==11*11, "npoints");
+     ok($gw->f==1, "filling fraction of white");
+     my $gb=Photonic::Geometry::FromImage2D->new(path=>'data/black.png');
+     ok($gb->f==0, "filling fraction of black");
+     my $gbi=Photonic::Geometry::FromImage2D->new(
+     path=>'data/black.png', inverted=>1);
+     ok($gbi->f==1, "filling fraction of inverted black");
+     my $gh=Photonic::Geometry::FromImage2D->new(path=>'data/half.png');
+     ok($gh->f==0.5, "filling fraction of half/half");
+}
 my $eps=r2C(zeroes(11,11));
 my $ge=Photonic::Geometry::FromEpsilon->new(epsilon=>$eps);
 ok(defined $ge, "Create geometry from epsilon");
